tests/ill_typed/struct2.mist
struct Foo(a: Int, b: String)
val foo = Foo(3, 3)